# npgpt

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
src/notebooks/: inference.ipynb  np_likeness_analysis.ipynb
src/npgpt/: __init__.py  config.py  data.py  model.py  tokenizer.py
src/scripts/: evaluate_np_likeness.py  inference.py  train.py
