[project]
name = "npgpt"
version = "0.1.0"
description = "Natural product generation with chemical language models"
authors = [{ name = "koh", email = "kohbanye@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/npgpt"]
